--- a/about page/photography.html
+++ b/about page/photography.html
@@ -100,7 +100,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" id="5" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/23.jpg);">
+							<a href="#" id="5" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/23.png);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 06</h3>
