--- a/about page/photography.html
+++ b/about page/photography.html
@@ -73,7 +73,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" id="2" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/19.png);">
+							<a href="#" id="2" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/19.jpeg);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 03</h3>
@@ -82,7 +82,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" id="3" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/4.png);">
+							<a href="#" id="3" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/4.jpeg);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 04</h3>
@@ -91,7 +91,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" id="4" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/5.png);">
+							<a href="#" id="4" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/5.jpeg);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 05</h3>
@@ -100,7 +100,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" id="5" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/23.png);">
+							<a href="#" id="5" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/23.jpeg);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 06</h3>
@@ -109,7 +109,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" id="6" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/7.png);">
+							<a href="#" id="6" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/7.jpeg);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 07</h3>
@@ -118,7 +118,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" id="7" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/10.png);">
+							<a href="#" id="7" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/10.jpeg);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 08</h3>
@@ -127,7 +127,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" id="8" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/12.png);">
+							<a href="#" id="8" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/12.jpeg);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 09</h3>
@@ -136,7 +136,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" id="9" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/16.png);">
+							<a href="#" id="9" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/16.jpeg);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 10</h3>
@@ -145,7 +145,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" id="10" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/17.png);">
+							<a href="#" id="10" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/17.jpeg);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 11</h3>
@@ -154,7 +154,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" id="11" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/18.png);">
+							<a href="#" id="11" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/18.jpeg);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 12</h3>
