--- a/about page/photography.html
+++ b/about page/photography.html
@@ -55,7 +55,7 @@
 				<div class="photograhy">
 					<div class="row no-gutters">
 						<div class="col-md-3">
-							<a href="#" id="nani" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/1.png);">
+							<a href="#" id="nani" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/1.jpg);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 01</h3>
@@ -64,7 +64,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" id="1" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/2.png);">
+							<a href="#" id="1" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/2.jpg);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 02</h3>
