--- a/about page/photography.html
+++ b/about page/photography.html
@@ -172,7 +172,7 @@
 
 	    <div class="close">+</div>
 
-		 <img  class="pics" src="images/1.png" alt="background">
+		 <img  class="pics" src="images/1.jpg" alt="background">
 	   </div>
 	  </div>
 <script src="krishna.js"></script>
