--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 			<div class="row">
 				<div class="span2 offset1 flyIn">
 					<div class="people">
-						<a href="about page\photography.html"><img class="team-thumb img-circle" src="img/team/krishna.jpg" alt="" /></a>
+						<a href="about page/photography.html"><img class="team-thumb img-circle" src="img/team/krishna.jpg" alt="" /></a>
 						<h3>Krishna varma</h3>
 						<p>
 						    phototgrapher
