--- a/about page/photography.html
+++ b/about page/photography.html
@@ -173,7 +173,7 @@
 	    <div class="close">+</div>
 
 		 <img  class="pics" src="images/1.jpg" alt="background">
-     <a href="images/1.jpg" download><button class"download-btn">download</button></a>
+     <a href="images/1.jpg" download><button class="download-btn">Download</button></a>
 	   </div>
 	  </div>
 <script src="krishna.js"></script>
