--- a/about page/photography.html
+++ b/about page/photography.html
@@ -25,7 +25,10 @@
 
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
-    <link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.css">
+
+
+
   </head>
   <body>
 	  <div class="vathsav" >
@@ -55,7 +58,7 @@
 				<div class="photograhy">
 					<div class="row no-gutters">
 						<div class="col-md-3">
-							<a href="#" id="nani" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/1.jpg);">
+							<a href="#" id="nani" onclick="watch()" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/1.jpg);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 01</h3>
@@ -64,7 +67,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" id="1" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/2.jpg);">
+							<a href="#" id="1" onclick="change()" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/2.jpg);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 02</h3>
@@ -73,7 +76,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" id="2" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/19.png);">
+							<a href="#" id="2" onclick="whatssup()" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/19.png);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 03</h3>
@@ -82,7 +85,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" id="3" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/4.png);">
+							<a href="#" id="3" onclick="pubg()" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/4.png);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 04</h3>
@@ -91,7 +94,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" id="4" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/5.png);">
+							<a href="#" id="4" onclick="lite()" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/5.png);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 05</h3>
@@ -100,7 +103,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" id="5" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/23.png);">
+							<a href="#" id="5" onclick="cod()" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/23.png);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 06</h3>
@@ -109,7 +112,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" id="6" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/7.png);">
+							<a href="#" id="6" onclick="krishna()" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/7.png);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 07</h3>
@@ -118,7 +121,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" id="7" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/10.png);">
+							<a href="#" id="7" onclick="vathsav()" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/10.png);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 08</h3>
@@ -127,7 +130,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" id="8" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/12.png);">
+							<a href="#" id="8" onclick="shashank()" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/12.png);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 09</h3>
@@ -136,7 +139,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" id="9" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/16.png);">
+							<a href="#" id="9" onclick="mani()" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/16.png);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 10</h3>
@@ -145,7 +148,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" id="10" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/17.png);">
+							<a href="#" id="10" onclick="kartik()" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/17.png);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 11</h3>
@@ -154,7 +157,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" id="11" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/18.png);">
+							<a href="#" id="11" onclick="sai()" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/18.png);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 12</h3>
@@ -172,7 +175,7 @@
 
 	    <div class="close">+</div>
 
-		 <img  class="pics" src="images/1.jpg" alt="background">
+		 <img  id="work" class="pics" src="images/1.jpg" alt="background">
      <a href="images/1.jpg" download><button class="download-btn">Download</button></a>
 	   </div>
 	  </div>
@@ -199,6 +202,9 @@
   <script src="js/scrollax.min.js"></script>
   <script src="js/google-map.js"></script>
   <script src="js/main.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
   </body>
 </html>
