--- a/about page/photography.html
+++ b/about page/photography.html
@@ -38,6 +38,7 @@
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
+			<img src="images/krishna.jpg" class="dpkrishna">
 			<h1 id="colorlib-logo"><a href="#">Krishna Varma<span>.</span></a></h1>
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
@@ -168,7 +169,7 @@
 					</div>
 				</div>
 			</section>
-	   <p class="krishna">Copyright @2020 By Krishna varma</p>
+	   <p class="krishna">Copyright @2020 By Krishna varma | All rights reseved</p>
 	<!-- Modal Section 1-->
 	<div id="001" class="bg-modal">
 		<div class="modal-contents">
