new animation pic added

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					</blockquote>
 				</div>
 				<div class="span6 aligncenter flyRight">
-					<i class="icon-coffee icon-10x"></i>
+					<i ><img src="camera.png" alt=""></i>
 				</div>
 			</div>
 		</div>
