--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html lang="en">
 
 <head>
+	<script data-ad-client="ca-pub-5088061856696737" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<meta charset="utf-8">
 	<title>Rudraraju</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,10 +15,10 @@
 	<!--mylinks-->
 	<link rel="stylesheet" href="web.css">
 	<!-- =======================================================
-    Theme Name: Maxim
-    Theme URL: https://bootstrapmade.com/maxim-free-onepage-bootstrap-theme/
-    Author: BootstrapMade.com
-    Author URL: https://bootstrapmade.com
+	Theme Name: Maxim
+	Theme URL: https://bootstrapmade.com/maxim-free-onepage-bootstrap-theme/
+	Author: BootstrapMade.com
+	Author URL: https://bootstrapmade.com
 	======================================================= -->
 </head>
 
