login page added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Rudraraju</title>
-        <link rel="stylesheet" href="webcss.css">
+        <title>
+            Login Page
+        </title>
+        <link rel="stylesheet" href="stylelogin.css">
     </head>
     <body>
-        <p>Our website is under construction. We'll be there here soon with our new awesome site.</p>
-        <img src="yes.gif" alt="gif">
+        <section>
+        <div class="box">
+            <img src="user.jpg" alt="profile" class="avathar">
+            <h1>Login Here</h1>
+            <p>Username:<br><input type="text" placeholder="Enter Username"p>
+            <p>Password:<br><input type="password" placeholder="Enter Password"></p><br>
+            <input type="submit" value="Submit" class="btn">
+        </div>
+    </section>
     </body>
 </html>
